# mas-code-sum

./: .gitignore  README.md  main.py  pyproject.toml  run_all_experiments.sh  run_experiment.py
asap_scripts/scripts/: BLEU.py  java_id.py  setup.sh  turbo.py
experiments/: codet5_base_multi_sum.yaml  codet5_base_multi_sum_same_project.yaml  debug_same_project.yaml  example.yaml  example_same_project.yaml  few_shot_asap_dfg_llama3.1_8b_bm25.yaml  few_shot_asap_llama3.1_8b_bm25.yaml  few_shot_asap_turbo_8b_bm25.yaml  few_shot_context_enriched_llama3.1_8b_bm25.yaml  few_shot_context_enriched_llama3.1_8b_directory.yaml  few_shot_context_enriched_llama3.1_8b_hyde.yaml  few_shot_context_enriched_llama3.1_8b_same_project.yaml  few_shot_context_enriched_random_ctx_llama3.1_8b_bm25.yaml  few_shot_context_enriched_turbo_bm25.yaml  few_shot_critic_llama3.1_8b_bm25.yaml  few_shot_file_context_llama3.1_8b_bm25.yaml  few_shot_llm_llama3.1_8b_bm25.yaml  few_shot_llm_llama3.1_8b_random.yaml  few_shot_llm_llama3.1_8b_random_same_project.yaml  style_guided_llama3.1_8b_bm25.yaml  zero_shot_llm_llama3.1_8b.yaml  zero_shot_llm_local.yaml  zero_shot_llm_qwen3_235b.yaml
experiments/local/: few_shot_file_context_local_bm25.yaml
scripts/: Repo_EDA.py  clone_dataset_repos.py  compare_bleu.py  preview_file_context_prompt.py
src/mas_code_sum/: data.py  metrics.py  runner.py  style_guide.py
src/mas_code_sum/enrichers/: dfg_loader.py  file_context.py  file_context_java.py  identifier_extractor.py
src/mas_code_sum/methods/: __init__.py  base.py  codet5_summarizer.py  exact_copy.py  (+10 more)
(+7 files in other folders)
