[project]
name = "mas-code-sum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "mlflow>=2.0",
    "nltk>=3.8",
    "rouge-score>=0.1.2",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pygithub>=2.9.0",
]
