[project]
name = "mas-code-sum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "mlflow>=2.0",
    "nltk>=3.8",
    "rouge-score>=0.1.2",
    "pyyaml>=6.0",
    "openai>=1.0",
    "torch>=2.0",
    "transformers==4.47.0",
    "matplotlib>=3.10.8",
    "rank-bm25>=0.2.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "astchunk>=0.1.0",
    "tqdm>=4.67.3",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pygithub>=2.9.0",
]
